# vulkan-2026

./: .gitignore
task1/: CMakeLists.txt
task1/src/: CMakeLists.txt  Main.cpp
task3/: .gitignore  README.md  concat.sh  depth_pipeline.py
task3/gold/: depth_pipeline.py  pyproject.toml
task3/gold/vulkan/: CMakeLists.txt
task3/gold/vulkan/shaders/: apply_threshold.comp  find_threshold.comp  histogram.comp
task3/gold/vulkan/spv/: apply_threshold.spv  find_threshold.spv
task3/gold/vulkan/src/: vk_noise.c  vk_noise.h
task3/vulkan/: build.sh
task3/vulkan/shaders/: apply_threshold.comp  find_threshold.comp  histogram.comp
task3/vulkan/spv/: find_threshold.spv  histogram.spv
task3/vulkan/src/: vk_noise.c
